// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Table/Table Defaults play-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table class="Table_table__VhSJI  Table_table_standard__8JWMb ">
      <caption class="Table_tableCaption__zTm5t Table_hidden__N7qKc Table_tableCaption_standard__Nhqht">
        tabellcaption
      </caption>
      <thead>
        <tr class>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_left__HuGJ2 "
              scope="col"
          >
            Category
          </th>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_left__HuGJ2 "
              scope="col"
          >
            Items
          </th>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_left__HuGJ2 "
              scope="col"
          >
            Expenditure
          </th>
        </tr>
      </thead>
      <tbody>
        <tr class>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM TableDataCell_dataCell_rowspan__-FmXM rowSpanRight"
              rowspan="2"
          >
            Edible
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            Donuts
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            3,000
          </td>
        </tr>
        <tr class>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            Cake
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            3,000
          </td>
        </tr>
        <tr class>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM TableDataCell_dataCell_rowspan__-FmXM rowSpanRight"
              rowspan="2"
          >
            Non-Edible
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            Stationery
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            18,000
          </td>
        </tr>
        <tr class>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            Batteries
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            9,000
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr class>
          <th class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  TableSum_sum__JNHMR "
              colspan="2"
              scope="row"
          >
            Sum
          </th>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  TableSum_sum__JNHMR ">
            32,000
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`Tester/Table/Table WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table id="htmlId"
           class="Table_table__VhSJI  Table_table_standard__8JWMb dummyClassname"
           lang="nb"
           data-testid="123ID"
    >
      <caption class="Table_tableCaption__zTm5t Table_hidden__N7qKc Table_tableCaption_standard__Nhqht">
        tabellcaption
      </caption>
      <thead>
        <tr class>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_left__HuGJ2 "
              scope="col"
          >
            Category
          </th>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_left__HuGJ2 "
              scope="col"
          >
            Items
          </th>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_left__HuGJ2 "
              scope="col"
          >
            Expenditure
          </th>
        </tr>
      </thead>
      <tbody>
        <tr class>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM TableDataCell_dataCell_rowspan__-FmXM rowSpanRight"
              rowspan="2"
          >
            Edible
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            Donuts
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            3,000
          </td>
        </tr>
        <tr class>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            Cake
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            3,000
          </td>
        </tr>
        <tr class>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM TableDataCell_dataCell_rowspan__-FmXM rowSpanRight"
              rowspan="2"
          >
            Non-Edible
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            Stationery
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            18,000
          </td>
        </tr>
        <tr class>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            Batteries
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            9,000
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr class>
          <th class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  TableSum_sum__JNHMR "
              colspan="2"
              scope="row"
          >
            Sum
          </th>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  TableSum_sum__JNHMR ">
            32,000
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`Tester/Table/Table WithExpandEditSort smoke-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table class="Table_table__VhSJI  Table_table_standard__8JWMb ">
      <caption class="Table_tableCaption__zTm5t Table_hidden__N7qKc Table_tableCaption_standard__Nhqht">
        Månedoversikt
      </caption>
      <thead>
        <tr class>
          <td class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_left__HuGJ2 ">
          </td>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_noPadding__3BrOH  TableHeaderCell_headerCell_left__HuGJ2 "
              scope="col"
          >
            <button class="TableHeaderCell_headerCellSortButton__vlnLu TableHeaderCell_headerCell_standard__I+g27"
                    type="button"
            >
              Dekningsgrad
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TableHeaderCell_headerCellSortButtonIcon__Pk3Mp"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rb:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rb:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_noPadding__3BrOH  TableHeaderCell_headerCell_left__HuGJ2 "
              data-testid="header-belop"
              scope="col"
          >
            <button class="TableHeaderCell_headerCellSortButton__vlnLu TableHeaderCell_headerCell_standard__I+g27"
                    type="button"
            >
              Beløp
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TableHeaderCell_headerCellSortButtonIcon__Pk3Mp"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rc:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rc:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_noPadding__3BrOH  TableHeaderCell_headerCell_right__UCGmP "
              scope="col"
          >
            <button class="TableHeaderCell_headerCellSortButton__vlnLu TableHeaderCell_headerCell_standard__I+g27"
                    type="button"
            >
              Måned
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TableHeaderCell_headerCellSortButtonIcon__Pk3Mp"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rd:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rd:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_noPadding__3BrOH  TableHeaderCell_headerCell_right__UCGmP "
              data-testid="header-avkastning"
              scope="col"
          >
            <button class="TableHeaderCell_headerCellSortButton__vlnLu TableHeaderCell_headerCell_standard__I+g27"
                    type="button"
            >
              Avkastning
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TableHeaderCell_headerCellSortButtonIcon__Pk3Mp"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:re:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:re:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr id=":rf:"
            class=" "
            data-testid="row-0"
        >
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  TableRowWithIconButton_buttonCell__Ogf4J  ">
            <button class="IconButton_button__mw9sG IconButton_button_medium__8KBUt  "
                    type="button"
                    aria-describedby="s5f0e"
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rg:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rg:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="s5f0e"
              class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  "
          >
            100 %
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  ">
            5426
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_center__kQKfP  ">
            Januar
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  ">
            1000
          </td>
        </tr>
        <tr id=":rh:"
            class=" "
            data-testid="row-1"
        >
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  TableRowWithIconButton_buttonCell__Ogf4J  ">
            <button class="IconButton_button__mw9sG IconButton_button_medium__8KBUt  "
                    type="button"
                    aria-describedby="3vesy"
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:ri:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:ri:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="3vesy"
              class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  "
          >
            50 %
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  ">
            5432
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_center__kQKfP  ">
            Februar
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  ">
            500
          </td>
        </tr>
        <tr id=":rj:"
            class=" "
            data-testid="row-2"
        >
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  TableRowWithIconButton_buttonCell__Ogf4J  ">
            <button class="IconButton_button__mw9sG IconButton_button_medium__8KBUt  "
                    type="button"
                    aria-describedby="16prz"
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rk:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rk:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="16prz"
              class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  "
          >
            20 %
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  ">
            4899
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_center__kQKfP  ">
            Mars
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  ">
            2000
          </td>
        </tr>
        <tr class
            data-testid="row-expand-3"
        >
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  TableRowWithIconButton_buttonCell__Ogf4J  ">
            <button class="IconButton_button__mw9sG IconButton_button_medium__8KBUt  "
                    type="button"
                    aria-describedby="3xpjb"
                    aria-expanded="false"
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rl:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rl:">
                  Mer informasjon
                </title>
                <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="3xpjb"
              class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  "
          >
            30 %
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  ">
            2344
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_center__kQKfP  ">
            April
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  ">
            1055
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr class>
          <th class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  TableSum_sum__JNHMR TableSum_sum_topSeparator__Ggyn4"
              colspan="4"
              scope="row"
          >
            Sum
          </th>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  TableSum_sum__JNHMR TableSum_sum_topSeparator__Ggyn4">
            4555
          </td>
        </tr>
      </tfoot>
    </table>
    <div class="Table_hidden__N7qKc"
         aria-live="polite"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Table/Table WithFullWidthAndTextAlignment smoke-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table class="Table_table__VhSJI Table_table_fullWidth__iZSij Table_table_standard__8JWMb ">
      <caption class="Table_tableCaption__zTm5t Table_hidden__N7qKc Table_tableCaption_standard__Nhqht">
        tabellcaption
      </caption>
      <thead>
        <tr class>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_left__HuGJ2 "
              scope="col"
          >
            left
          </th>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_center__1aSLj "
              scope="col"
          >
            center
          </th>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_right__UCGmP "
              scope="col"
          >
            right
          </th>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_left__HuGJ2 "
              scope="col"
          >
            default
          </th>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_right__UCGmP "
              scope="col"
          >
            right
          </th>
        </tr>
      </thead>
      <tbody>
        <tr class>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            left
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_center__kQKfP  ">
            center
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  ">
            right
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            default
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            left
          </td>
        </tr>
        <tr class>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            left
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_center__kQKfP  ">
            center
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  ">
            right
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            default
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  ">
            right
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Tester/Table/Table WithRef play-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table class="Table_table__VhSJI  Table_table_standard__8JWMb "
           id="dummyIdForwardedFromRef"
    >
      <caption class="Table_tableCaption__zTm5t Table_hidden__N7qKc Table_tableCaption_standard__Nhqht">
        tabellcaption
      </caption>
      <thead>
        <tr class>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_left__HuGJ2 "
              scope="col"
          >
            Category
          </th>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_left__HuGJ2 "
              scope="col"
          >
            Items
          </th>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_left__HuGJ2 "
              scope="col"
          >
            Expenditure
          </th>
        </tr>
      </thead>
      <tbody>
        <tr class>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM TableDataCell_dataCell_rowspan__-FmXM rowSpanRight"
              rowspan="2"
          >
            Edible
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            Donuts
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            3,000
          </td>
        </tr>
        <tr class>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            Cake
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            3,000
          </td>
        </tr>
        <tr class>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM TableDataCell_dataCell_rowspan__-FmXM rowSpanRight"
              rowspan="2"
          >
            Non-Edible
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            Stationery
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            18,000
          </td>
        </tr>
        <tr class>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            Batteries
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
            9,000
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr class>
          <th class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  TableSum_sum__JNHMR "
              colspan="2"
              scope="row"
          >
            Sum
          </th>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  TableSum_sum__JNHMR ">
            32,000
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`Tester/Table/Table WithScrollbar smoke-test 1`] = `
<div data-test-block="true">
  <p>
    Table med Scrollbar
  </p>
  <div class="scrollTableWrapper">
    <div class="Table_wrapper__cQelY ">
      <table class="Table_table__VhSJI  Table_table_standard__8JWMb ">
        <caption class="Table_tableCaption__zTm5t Table_hidden__N7qKc Table_tableCaption_standard__Nhqht">
          tabellcaption
        </caption>
        <thead>
          <tr class>
            <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_left__HuGJ2 "
                scope="col"
            >
              Forename
            </th>
            <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_left__HuGJ2 "
                scope="col"
            >
              Surname
            </th>
            <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_left__HuGJ2 "
                scope="col"
            >
              email
            </th>
          </tr>
        </thead>
        <tbody>
          <tr class>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              Otto
            </td>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              Octavius
            </td>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              doc.ock@example.org
            </td>
          </tr>
          <tr class>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              Norman
            </td>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              Osbourne
            </td>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              norman.osbourne@example.org
            </td>
          </tr>
          <tr class>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              Curt
            </td>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              Connors
            </td>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              curt.connors@example.org
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div class="scrollTableWrapperSuccess">
    <div class="Table_wrapper__cQelY ">
      <table class="Table_table__VhSJI  Table_table_standard__8JWMb ">
        <caption class="Table_tableCaption__zTm5t Table_hidden__N7qKc Table_tableCaption_standard__Nhqht">
          tabellcaption
        </caption>
        <thead>
          <tr class>
            <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_left__HuGJ2 "
                scope="col"
            >
              Forename
            </th>
            <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_left__HuGJ2 "
                scope="col"
            >
              Surname
            </th>
            <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_left__HuGJ2 "
                scope="col"
            >
              email
            </th>
          </tr>
        </thead>
        <tbody>
          <tr class>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              Otto
            </td>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              Octavius
            </td>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              doc.ock@example.org
            </td>
          </tr>
          <tr class>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              Norman
            </td>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              Osbourne
            </td>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              norman.osbourne@example.org
            </td>
          </tr>
          <tr class>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              Curt
            </td>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              Connors
            </td>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              curt.connors@example.org
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div class="scrollTableWrapperWarning">
    <div class="Table_wrapper__cQelY ">
      <table class="Table_table__VhSJI  Table_table_standard__8JWMb ">
        <caption class="Table_tableCaption__zTm5t Table_hidden__N7qKc Table_tableCaption_standard__Nhqht">
          tabellcaption
        </caption>
        <thead>
          <tr class>
            <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_left__HuGJ2 "
                scope="col"
            >
              Forename
            </th>
            <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_left__HuGJ2 "
                scope="col"
            >
              Surname
            </th>
            <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_left__HuGJ2 "
                scope="col"
            >
              email
            </th>
          </tr>
        </thead>
        <tbody>
          <tr class>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              Otto
            </td>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              Octavius
            </td>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              doc.ock@example.org
            </td>
          </tr>
          <tr class>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              Norman
            </td>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              Osbourne
            </td>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              norman.osbourne@example.org
            </td>
          </tr>
          <tr class>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              Curt
            </td>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              Connors
            </td>
            <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
              curt.connors@example.org
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Tester/Table/Table WithVariantCompact smoke-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table class="Table_table__VhSJI  Table_table_compact__MEM6O ">
      <caption class="Table_tableCaption__zTm5t Table_hidden__N7qKc Table_tableCaption_compact__AmeMW">
        Månedoversikt
      </caption>
      <thead>
        <tr class>
          <td class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_compact__-SSF+  TableHeaderCell_headerCell_left__HuGJ2 ">
          </td>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_noPadding__3BrOH  TableHeaderCell_headerCell_left__HuGJ2 "
              scope="col"
          >
            <button class="TableHeaderCell_headerCellSortButton__vlnLu TableHeaderCell_headerCell_compact__-SSF+"
                    type="button"
            >
              Dekningsgrad
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TableHeaderCell_headerCellSortButtonIcon__Pk3Mp"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r0:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r0:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_noPadding__3BrOH  TableHeaderCell_headerCell_left__HuGJ2 "
              data-testid="header-belop"
              scope="col"
          >
            <button class="TableHeaderCell_headerCellSortButton__vlnLu TableHeaderCell_headerCell_compact__-SSF+"
                    type="button"
            >
              Beløp
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TableHeaderCell_headerCellSortButtonIcon__Pk3Mp"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_noPadding__3BrOH  TableHeaderCell_headerCell_right__UCGmP "
              scope="col"
          >
            <button class="TableHeaderCell_headerCellSortButton__vlnLu TableHeaderCell_headerCell_compact__-SSF+"
                    type="button"
            >
              Måned
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TableHeaderCell_headerCellSortButtonIcon__Pk3Mp"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r2:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r2:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_noPadding__3BrOH  TableHeaderCell_headerCell_right__UCGmP "
              data-testid="header-avkastning"
              scope="col"
          >
            <button class="TableHeaderCell_headerCellSortButton__vlnLu TableHeaderCell_headerCell_compact__-SSF+"
                    type="button"
            >
              Avkastning
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TableHeaderCell_headerCellSortButtonIcon__Pk3Mp"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r3:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r3:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr id=":r4:"
            class=" "
            data-testid="row-0"
        >
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_compact__uYHIK TableDataCell_dataCell_left__+6UbM  TableRowWithIconButton_buttonCell__Ogf4J TableRowWithIconButton_buttonCell_compact__yXcNT ">
            <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY  "
                    type="button"
                    aria-describedby="s5f0e"
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r5:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r5:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="s5f0e"
              class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_compact__uYHIK TableDataCell_dataCell_right__5f8tM  "
          >
            100 %
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_compact__uYHIK TableDataCell_dataCell_right__5f8tM  ">
            5426
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_compact__uYHIK TableDataCell_dataCell_center__kQKfP  ">
            Januar
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_compact__uYHIK TableDataCell_dataCell_right__5f8tM  ">
            1000
          </td>
        </tr>
        <tr id=":r6:"
            class=" "
            data-testid="row-1"
        >
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_compact__uYHIK TableDataCell_dataCell_left__+6UbM  TableRowWithIconButton_buttonCell__Ogf4J TableRowWithIconButton_buttonCell_compact__yXcNT ">
            <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY  "
                    type="button"
                    aria-describedby="3vesy"
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r7:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r7:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="3vesy"
              class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_compact__uYHIK TableDataCell_dataCell_right__5f8tM  "
          >
            50 %
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_compact__uYHIK TableDataCell_dataCell_right__5f8tM  ">
            5432
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_compact__uYHIK TableDataCell_dataCell_center__kQKfP  ">
            Februar
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_compact__uYHIK TableDataCell_dataCell_right__5f8tM  ">
            500
          </td>
        </tr>
        <tr id=":r8:"
            class=" "
            data-testid="row-2"
        >
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_compact__uYHIK TableDataCell_dataCell_left__+6UbM  TableRowWithIconButton_buttonCell__Ogf4J TableRowWithIconButton_buttonCell_compact__yXcNT ">
            <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY  "
                    type="button"
                    aria-describedby="16prz"
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r9:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r9:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="16prz"
              class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_compact__uYHIK TableDataCell_dataCell_right__5f8tM  "
          >
            20 %
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_compact__uYHIK TableDataCell_dataCell_right__5f8tM  ">
            4899
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_compact__uYHIK TableDataCell_dataCell_center__kQKfP  ">
            Mars
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_compact__uYHIK TableDataCell_dataCell_right__5f8tM  ">
            2000
          </td>
        </tr>
        <tr class
            data-testid="row-expand-3"
        >
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_compact__uYHIK TableDataCell_dataCell_left__+6UbM  TableRowWithIconButton_buttonCell__Ogf4J TableRowWithIconButton_buttonCell_compact__yXcNT ">
            <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY  "
                    type="button"
                    aria-describedby="3xpjb"
                    aria-expanded="false"
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:ra:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:ra:">
                  Mer informasjon
                </title>
                <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="3xpjb"
              class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_compact__uYHIK TableDataCell_dataCell_right__5f8tM  "
          >
            30 %
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_compact__uYHIK TableDataCell_dataCell_right__5f8tM  ">
            2344
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_compact__uYHIK TableDataCell_dataCell_center__kQKfP  ">
            April
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_compact__uYHIK TableDataCell_dataCell_right__5f8tM  ">
            1055
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr class>
          <th class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_compact__uYHIK TableDataCell_dataCell_right__5f8tM  TableSum_sum__JNHMR TableSum_sum_topSeparator__Ggyn4"
              colspan="4"
              scope="row"
          >
            Sum
          </th>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_compact__uYHIK TableDataCell_dataCell_right__5f8tM  TableSum_sum__JNHMR TableSum_sum_topSeparator__Ggyn4">
            4555
          </td>
        </tr>
      </tfoot>
    </table>
    <div class="Table_hidden__N7qKc"
         aria-live="polite"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/Table/Table WithWideScreen smoke-test 1`] = `
<div data-test-block="true">
  <div class=" ">
    <table class="Table_table__VhSJI  Table_table_standard__8JWMb ">
      <caption class="Table_tableCaption__zTm5t Table_hidden__N7qKc Table_tableCaption_standard__Nhqht">
        Månedoversikt
      </caption>
      <thead>
        <tr class>
          <td class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_standard__I+g27  TableHeaderCell_headerCell_left__HuGJ2 ">
          </td>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_noPadding__3BrOH  TableHeaderCell_headerCell_left__HuGJ2 "
              scope="col"
          >
            <button class="TableHeaderCell_headerCellSortButton__vlnLu TableHeaderCell_headerCell_standard__I+g27"
                    type="button"
            >
              Dekningsgrad
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TableHeaderCell_headerCellSortButtonIcon__Pk3Mp"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rv:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rv:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_noPadding__3BrOH  TableHeaderCell_headerCell_left__HuGJ2 "
              data-testid="header-belop"
              scope="col"
          >
            <button class="TableHeaderCell_headerCellSortButton__vlnLu TableHeaderCell_headerCell_standard__I+g27"
                    type="button"
            >
              Beløp
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TableHeaderCell_headerCellSortButtonIcon__Pk3Mp"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r10:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r10:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_noPadding__3BrOH  TableHeaderCell_headerCell_right__UCGmP "
              scope="col"
          >
            <button class="TableHeaderCell_headerCellSortButton__vlnLu TableHeaderCell_headerCell_standard__I+g27"
                    type="button"
            >
              Måned
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TableHeaderCell_headerCellSortButtonIcon__Pk3Mp"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r11:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r11:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
          <th class="TableHeaderCell_headerCell__3iEUX TableHeaderCell_headerCell_noPadding__3BrOH  TableHeaderCell_headerCell_right__UCGmP "
              data-testid="header-avkastning"
              scope="col"
          >
            <button class="TableHeaderCell_headerCellSortButton__vlnLu TableHeaderCell_headerCell_standard__I+g27"
                    type="button"
            >
              Avkastning
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TableHeaderCell_headerCellSortButtonIcon__Pk3Mp"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r12:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r12:">
                  Sorterbar
                </title>
                <path d="m7 1.9 5.6 5.8-1.1 1.2-3.6-3.8v17H6.1v-17L2.6 8.9 1.4 7.6 7 1.9Zm10.9 0v17l3.5-3.8 1.2 1.3-5.6 5.7-5.6-5.8 1.1-1.2 3.6 3.8v-17h1.8Z">
                </path>
              </svg>
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr id=":r13:"
            class=" "
            data-testid="row-0"
        >
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  TableRowWithIconButton_buttonCell__Ogf4J  ">
            <button class="IconButton_button__mw9sG IconButton_button_large__IejTf  "
                    type="button"
                    aria-describedby="s5f0e"
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r14:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r14:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="s5f0e"
              class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  "
          >
            100 %
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  ">
            5426
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_center__kQKfP  ">
            Januar
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  ">
            1000
          </td>
        </tr>
        <tr id=":r15:"
            class=" "
            data-testid="row-1"
        >
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  TableRowWithIconButton_buttonCell__Ogf4J  ">
            <button class="IconButton_button__mw9sG IconButton_button_large__IejTf  "
                    type="button"
                    aria-describedby="3vesy"
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r16:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r16:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="3vesy"
              class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  "
          >
            50 %
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  ">
            5432
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_center__kQKfP  ">
            Februar
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  ">
            500
          </td>
        </tr>
        <tr id=":r17:"
            class=" "
            data-testid="row-2"
        >
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  TableRowWithIconButton_buttonCell__Ogf4J  ">
            <button class="IconButton_button__mw9sG IconButton_button_large__IejTf  "
                    type="button"
                    aria-describedby="16prz"
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r18:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r18:">
                  Rediger rad
                </title>
                <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="16prz"
              class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  "
          >
            20 %
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  ">
            4899
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_center__kQKfP  ">
            Mars
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  ">
            2000
          </td>
        </tr>
        <tr class
            data-testid="row-expand-3"
        >
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  TableRowWithIconButton_buttonCell__Ogf4J  ">
            <button class="IconButton_button__mw9sG IconButton_button_large__IejTf  "
                    type="button"
                    aria-describedby="3xpjb"
                    aria-expanded="false"
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r19:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r19:">
                  Mer informasjon
                </title>
                <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
                </path>
              </svg>
            </button>
          </td>
          <td id="3xpjb"
              class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  "
          >
            30 %
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  ">
            2344
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_center__kQKfP  ">
            April
          </td>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  ">
            1055
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr class>
          <th class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  TableSum_sum__JNHMR TableSum_sum_topSeparator__Ggyn4"
              colspan="4"
              scope="row"
          >
            Sum
          </th>
          <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_right__5f8tM  TableSum_sum__JNHMR TableSum_sum_topSeparator__Ggyn4">
            4555
          </td>
        </tr>
      </tfoot>
    </table>
    <div class="Table_hidden__N7qKc"
         aria-live="polite"
    >
    </div>
  </div>
</div>
`;
